# profiles-rest-api

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.rst  docker-compose.dev.yml  pyproject.toml  requirements.txt
.github/workflows/: pr.yml
core/: manage.py
core/profiles_api/: apps.py  models.py  urls.py  views.py
core/profiles_api/migrations/: 0001_initial.py  0002_alter_userprofile_is_staff.py
core/profiles_project/: settings.py  urls.py
core/profiles_project/settings/: __init__.py  base.py  envvars.py
core/profiles_project/settings/templates/: settings.dev.py
profiles_api/: models.py
profiles_api/migrations/: 0001_initial.py
profiles_project/: settings.py
profiles_rest_api_core/: conftest.py  manage.py
profiles_rest_api_core/general/utils/: cryptography.py  misc.py
profiles_rest_api_core/profiles_api/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
profiles_rest_api_core/profiles_api/migrations/: 0001_initial.py  0002_alter_userprofile_is_staff.py  0003_profilefeeditem.py
profiles_rest_api_core/profiles_api/tests/: test_rest_api.py
profiles_rest_api_core/profiles_api/tests/fixtures/: __init__.py  profiles_api.py
profiles_rest_api_core/profiles_project/: urls.py
profiles_rest_api_core/profiles_project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
profiles_rest_api_core/profiles_project/settings/templates/: settings.dev.py  settings.github.py
scripts/: entrypoint.sh  product_data.py
