[tool.poetry]
name = "profiles-rest-api"
version = "0.1.0"
description = ""
authors = ["Chun Lu <chun.lu.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
djangorestframework = "^3.14.0"
django-filter = "^23.2"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"
pydantic = "^2.2.1"
pynacl = "^1.5.0"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.2"
flake8 = "^6.1.0"
colorlog = "^6.7.0"
black = "^23.7.0"
codespell = "^2.2.5"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
